# diffusion-trainer

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run_load_dataset.py  run_prepare.py  run_train.py  simple_train.py
configs/: advanced_noise_example.toml  sd15.toml  sd15_lokr.toml  sd15_lora.toml  sdxl.toml  sdxl_lokr.toml
diffusion_trainer/dataset/: __init__.py  clean_prompt_processor.py  dataset.py  latents_generate_processor.py  tagging_processor.py
diffusion_trainer/dataset/utils/: __init__.py
diffusion_trainer/finetune/: __init__.py  sdxl.py
diffusion_trainer/finetune/utils/: __init__.py  sdxl.py
diffusion_trainer/lib/: __init__.py  model_util.py  sdxl_original_unet.py
diffusion_trainer/scripts/: sdxl_convert_to_single_file.py
playground/: draw_lr.py
scripts/: batch_tagging.py  batch_vae_encode.py  convert_ss_meta_to_trainer_meta.py  load_dataset_from_pictoria.py  read_npz.py
scripts/from_diffusers/: sdxl_convert_to_single_file.py
src/diffusion_trainer/config/: __init__.py
src/diffusion_trainer/dataset/: __init__.py  clean_prompt_processor.py  dataset.py  latents_generate_processor.py  tagging_processor.py
src/diffusion_trainer/dataset/processors/: create_parquet_processor.py  latents_generate_processor.py  tagging_processor.py
src/diffusion_trainer/dataset/utils/: __init__.py
src/diffusion_trainer/finetune/: base.py  sd15.py  sdxl.py
src/diffusion_trainer/finetune/utils/: __init__.py  lora.py
src/diffusion_trainer/shared/: __init__.py
src/diffusion_trainer/utils/: advanced_noise.py  flash_attention.py  log_normal_pdf.py  timestep_weights.py
tests/diffusion_trainer/finetune/: test_embedding_equivalence.py
tests/diffusion_trainer/finetune/utils/: test_compute_all_snr.py
