[project]
name = "diffusion-trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.1.1",
    "diffusers>=0.31.0",
    "einops>=0.8.0",
    "opencv-python>=4.10.0.84",
    "pillow-avif-plugin>=1.4.6",
    "pillow>=11.0.0",
    "pyarrow>=18.1.0",
    "rich>=13.9.4",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.46.3",
    "wandb>=0.18.7",
    "wdtagger[gpu]>=0.10.2",
    "xformers>=0.0.28.post3",
    "bitsandbytes>=0.45.0",
    "peft>=0.14.0",
    "lycoris-lora>=3.1.1.post1",
    "deepspeed>=0.16.2",
    "scipy>=1.15.2",
    "matplotlib>=3.10.1",
]


[tool.uv]
package = true
upgrade = true

[[tool.uv.index]]
name = "default"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
xformers = { index = "pytorch" }


[tool.pyright]

[tool.ruff]
line-length = 160
select = ["ALL"]

ignore = [
    "PGH",
    "RUF003",
    "BLE001",
    "ERA001",
    "FIX002",
    "TD002",
    "TD003",
    "D",
    "PLR2004", # Allow Magic Numbers 
    "INP001",  # Allow without __init__.py
    "N812",    # Allow aliased to non-lowercase names (e.g. `import torch.nn.functional as F`)
    "FBT003",  # Allow boolean positional values in function calls
    "S311",    # Allow use random
]
exclude = ["scripts/from_diffusers/**/*"]

[dependency-groups]
dev = ["ruff>=0.8.0"]
