[project]
name = "diffusion-trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.1.1",
    "diffusers>=0.31.0",
    "einops>=0.8.0",
    "opencv-python>=4.10.0.84",
    "pillow-avif-plugin>=1.4.6",
    "pillow>=11.0.0",
    "pyarrow>=18.1.0",
    "rich>=13.9.4",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.46.3",
    "wandb>=0.18.7",
    "wdtagger[gpu]>=0.10.2",
    "xformers>=0.0.28.post3",
    "bitsandbytes>=0.45.0",
    "peft>=0.14.0",
    "lycoris-lora>=3.1.1.post1",
    "deepspeed>=0.16.2",
    "scipy>=1.15.2",
    "matplotlib>=3.10.1",
    "inch>=0.2.0",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "torchao>=0.9.0",
    "diffusion-prompt-embedder>=0.2.0",
]


[tool.uv]
package = true
upgrade = true

[[tool.uv.index]]
name = "default"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
xformers = { index = "pytorch" }
torchao = { index = "pytorch" }
sd-embed = { git = "https://github.com/xhinker/sd_embed.git", rev = "main" }

[tool.pyright]

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "PGH",
    "RUF003",
    "BLE001",
    "ERA001",
    "FIX002",
    "TD002",
    "TD003",
    "D",
    "PLR2004",
    "INP001",
    "N812",
    "FBT003",
    "S311",
]
exclude = ["scripts/from_diffusers/**/*"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"src/diffusion_trainer/finetune/base.py" = ["PLC0415"]  # Allow conditional imports for optional dependencies
"src/diffusion_trainer/finetune/utils/__init__.py" = ["PLC0415"]  # Allow conditional imports for optional dependencies

[dependency-groups]
dev = ["ruff>=0.8.0"]
